[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lambda_utils"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lambda_utils = ["py.typed"]

[tool.ruff]
line-length = 79
